k8s/app-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: 501591550703.dkr.ecr.ap-south-1.amazonaws.com/foodwaste:frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 5173
        readinessProbe:
            tcpSocket:
              port: 5173
            initialDelaySeconds: 3
            periodSeconds: 10
        resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---

apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
